# Animesh

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  animesh.sublime-project  animesh.sublime-workspace
main/: CMakeLists.txt  main.cpp
src/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.in  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  main.cpp
src/QtMain/: AnimeshMainWindow.cpp  AnimeshMainWindow.h  AnimeshMainWindow.ui  CMakeLists.txt  main.cpp
src/cmake_modules/: FindVCG.cmake
src/include/: AnimeshConfig.h
src/libArgs/: CMakeLists.txt
src/libArgs/src/: Args.cpp
src/libArgs/tests/: TestArgs.cpp
src/libCamera/: CMakeLists.txt
src/libCamera/src/: Camera.cpp
src/libCamera/tests/: TestCamera.cpp  TestCamera.h
src/libCorrespondence/: CMakeLists.txt
src/libCorrespondence/src/: CorrespondenceIO.cpp
src/libCorrespondence/tests/: TestCorrespondence.cpp  TestCorrespondence.h
src/libDepthMap/: CMakeLists.txt
src/libDepthMap/src/: CrossProductNormals.cpp  DepthMap.cpp  DepthMapPyramid.cpp  Normals.cpp  PclNormals.cpp  PlaneFittingNormals.cpp
src/libDepthMap/tests/: TestDepthMap.cpp  TestDepthMap.h  TestDepthMapPyramid.cpp  TestPlanarNormals.cpp  TestPlanarNormals.h  testDepthMapPyramid.h
src/libElement/: CMakeLists.txt
src/libElement/src/: Element.cpp
src/libElement/tests/: TestElement.cpp
src/libField/: CMakeLists.txt
src/libField/docs/: Design.md  Thinkpad
src/libField/src/: Checks.cpp  CorrespondenceMapping.cpp  Field.cpp  FieldBuilder.cpp  FieldData.cpp  FieldDebugging.cpp  FieldElement.cpp  FieldFactory.cpp  FieldOptimiser.cpp  FieldSmoother.cpp  MatlabFieldExporter.cpp  ObjFileParser.cpp  PointNormal.cpp  PrefabFields.cpp
src/libField/tests/: TestField.cpp  TestField.h  TestFieldData.cpp  TestFieldData.h  TestFieldElement.cpp  TestFieldElement.h  TestMatlabFieldExporter.cpp  TestMatlabFieldExporter.h  TestObjFileParser.cpp  TestObjFileParser.h
src/libFileUtil/: CMakeLists.txt
src/libFileUtil/include/: FileUtils.h
src/libFileUtil/src/: FileUtil.cpp
src/libFileUtils/: CMakeLists.txt
src/libFileUtils/src/: FileUtils.cpp  ObjFileParser.cpp  PgmFileParser.cpp
src/libFileUtils/tests/: TestFileUtils.cpp  TestObjFileParser.h  testFileUtils.cpp  testFileUtils.h
src/libGeom/: CMakeLists.txt
src/libGeom/src/: Checks.cpp  Geom.cpp  geom.cpp
src/libGeom/tests/: TestGeom.cpp  TestGeom.h
src/libGeomFileUtils/: CMakeLists.txt
src/libGeomFileUtils/src/: ObjFileParser.cpp  PgmFileParser.cpp  io_utils.cpp
src/libGeomFileUtils/tests/: TestObjFileParser.cpp  TestObjFileParser.h  main.cpp
src/libGraph/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/libGraph/docs/: design.txt
src/libGraph/src/: ExplicitGraphBuilder.cpp  Graph.cpp  GraphBuilder.cpp  GraphNode.cpp  GridEdgeManager.cpp  GridGraphBuilder.cpp  NNEdgeManager.cpp  PCLGraphBuilder.cpp  Path.cpp
src/libGraph/tests/: MockEdgeManager.h  TestGraph.cpp  TestGraph.h  TestGraphCycles.cpp  TestGraphCycles.h  TestGraphSimplifier.cpp  TestGraphSimplifier.h  TestGridEdgeManager.cpp  TestGridEdgeManager.h  TestHierarchicalGraph.cpp  TestHierarchicalGraph.h  TestNNEdgeManager.cpp  TestNNEdgeManager.h
src/libPoSy/: CMakeLists.txt
src/libPoSy/src/: AbstractOptimiser.cpp  PoSy.cpp  PoSyOptimiser.cpp
src/libPoSy/tests/: TestPoSy.cpp  TestPoSy.h  TestPoSyOptimiser.cpp  TestPoSyOptimiser.h
src/libPointCloud/: CMakeLists.txt
src/libPointCloud/src/: PointCloud.cpp
src/libPointCloud/tests/: TestPointCloud.cpp  TestPointCloud.h
src/libProperties/: CMakeLists.txt
src/libProperties/src/: Properties.cpp
src/libProperties/tests/: TestProperties.cpp  TestProperties.h
src/libRoSy/: CMakeLists.txt
src/libRoSy/src/: RoSy.cpp  RoSyOptimiser.cpp
src/libRoSy/tests/: GtestUtility.h  TestAngleBetweenVectors.cpp  TestMinimiseKL.cpp  TestMinimiseKL.h  TestRoSy.cpp  TestRoSy.h  TestVectorRotation.cpp  TestVectorRotation.h
src/libSurfel/: CMakeLists.txt
src/libSurfel/src/: FrameData.cpp  Pixel.cpp  PixelInFrame.cpp  Surfel.cpp  Surfel_Compute.cpp  Surfel_IO.cpp
src/libSurfel/tests/: TestSurfel.cpp  TestSurfel.h
src/libUtilities/: CMakeLists.txt
src/libUtilities/src/: utilities.cpp
src/libVectorAngle/: CMakeLists.txt  CTestTestfile.cmake  Makefile  VectorAngleLibraryConfig.cmake  cmake_install.cmake
src/libVectorAngle/src/: angleBetweenVectors.cpp
src/libVectorAngle/tests/: TestAngleBetweenVectors.cpp  TestMinimiseKL.cpp  TestVectorRotation.cpp  (+1 more)
src/main/: AnimeshConfig.h.in  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  load_and_save.cpp  load_and_save.h  main.cpp  visualisation.cpp  visualisation.h
src/make_poly/: CMakeLists.txt  main.cpp
src/mesher/: AnimeshApplication.cpp  AnimeshApplication.h  CMakeLists.txt  CrossFieldGLCanvas.cpp  CrossFieldGLCanvas.h  animesh.properties  args.cpp  args.h  compute_corr.cpp  correspondences.cpp  correspondences_args.cpp  correspondences_args.h  correspondences_compute.cpp  correspondences_compute.h  correspondences_io.cpp  correspondences_io.h  depth_image_loader.cpp  depth_image_loader.h  depth_map_io.cpp  depth_map_io.h  hierarchical_mesher.cpp  hierarchical_mesher_cli.cpp  hierarchical_mesher_ui.cpp  hierarchical_mesher_utilities.cpp  hierarchical_mesher_utilities.h  io_utils.cpp  io_utils.h  mesher.cpp  mesher_args.cpp  mesher_args.h  optimise.cpp  optimise.h  pixel_correspondence._hpp  pixel_correspondence.cpp  pixel_correspondence.hpp  posy_cli.cpp  smooth.cpp  smooth.h  surfe_io.cpp  surfel.cpp  (+12 more)
src/pcl_graph/: CMakeLists.txt  main.cpp  thrrejs.sublime-workspace
src/tools/: CMakeLists.txt  OBJ_Loader.h  camera.txt  corr_util.cpp  dat_gen.cpp  dm_to_point_cloud.cpp  dmr.cpp  dmr_old.txt  fbo.cpp  glutils.cpp  glutils.hpp  make_corr_sets.cpp  mesh.cpp  mesh.hpp  mesh_cl.cpp  model.cpp  model.hpp  model_cl.cpp  obj_converter.cpp  perfTool.cpp  shader.hpp
tests/testGraph/: CMakeLists.txt
tests/testVectorAngles/: CMakeLists.txt  TestAngleBetweenVectors.cpp  TestMinimiseKL.cpp  TestVectorRotation.cpp  VectorAngleTest.cpp  VectorAngleTest.h
(+793 files in other folders)
